syntax = "proto3";

package proto;

message ConnectRoomInfo {
    fixed32 ip = 1;
    uint32 port = 2;
}

message LogicResponse {
    ConnectRoomInfo mInfo = 1;
}

message LogicRequest {
    string Token = 1;
}

service StreamLogicService {
    rpc Route(stream LogicRequest) returns (stream LogicResponse) {};
}

enum MsgType {
    Regist          = 0;    // 注册roomserver
    Update          = 1;    // 更新roomserver信息
}

message RoomResponse {

}

message RoomRequest {
    MsgType type = 1;
    bytes data = 2;
}

service StreamRoomService {
    rpc Route(stream RoomRequest) returns (stream RoomResponse) {};
}